# zspace-cli

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
skills/media-manager/: SKILL.md
skills/media-manager/scripts/: scan.py
src/zspace_cli/: __init__.py  auth.py  cli.py  client.py  mcp_server.py
