[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zspace-cli"
version = "0.1.0"
description = "CLI & SDK for ZSpace (极空间) NAS — manage files from your terminal or AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "skyzhao" },
]
keywords = ["zspace", "nas", "cli", "sdk", "mcp", "极空间", "file-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.24",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/skyzhao/zspace-cli"
Documentation = "https://github.com/skyzhao/zspace-cli#readme"
Repository = "https://github.com/skyzhao/zspace-cli"
Issues = "https://github.com/skyzhao/zspace-cli/issues"

[project.scripts]
zs = "zspace_cli.cli:app"
zs-mcp = "zspace_cli.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
